--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cool-ascii-faces": "1.3.4",
     "ejs": "^2.5.6",
+    "elasticsearch": "14.1.0",
     "express": "^4.15.2"
   },
   "devDependencies": {
