--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "cool-ascii-faces": "1.3.4",
     "ejs": "^2.5.6",
     "elasticsearch": "14.1.0",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "firebase": "4.10.1"
   },
   "devDependencies": {
     "request": "^2.81.0",
